# line-character-agent

./: .env.sample  .env.sample.local  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  azure.yaml  docker-compose.yaml  docker-compose.yml  line-character-agent.code-workspace  pyproject.toml  ruff_output.txt  sequence.md  startup.txt  whisper.py
.claude/agents/: test-runner.md
.claude/skills/add-package/: SKILL.md
.claude/skills/test-creator/: SKILL.md
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml  post_create.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/actions/azd-service-deploy/: action.yml
.github/workflows/: auto-fix-ci.yml  azure-deploy.yml  claude-code-review.yml  claude.yml  claude_opus.yml  codeql.yml  deploy-api.yml  deploy-func.yml  deploy-mcp.yml  main-azure-deploy.yml  main_app-eyj6cxqofwhlu.yml  main_tomochat.yml  provision.yml  ruff-auto-fix.yml  test.yml  test_api.yml  test_func.yml  test_mcp.yml
api/: Dockerfile  main.py  requirements.txt  startup.txt
api/utils/: chat.py  config.py  cosmos.py
docs/: design-agent-node-refactoring.md
images/: system-architecture.drawio
infra/: main.bicep  main.bicepparam
infra/app/: api.bicep  func.bicep  mcp-spotify.bicep  mcp.bicep
infra/core/: appservice.bicep  appserviceplan.bicep
infra/core/db/: cosmos.bicep  indexing-policy.json  vector-embedding-policy.json
infra/core/host/: appservice.bicep  appserviceplan.bicep  assign-keyvault-roles.bicep  function.bicep  functions.bicep
infra/core/storage/: storage-account.bicep
prompts/: system_prompt.md  system_prompt.txt
src/api/: .dockerignore  .env.sample  .env.sample.local  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
src/api/chatbot/: dependencies.py  main.py  models.py
src/api/chatbot/agent/: __init__.py  character.py  diary_workflow.py  prompt.py  tools.py
src/api/chatbot/agent/character_graph/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/api/chatbot/agent/diary_workflow/: __init__.py  workflow.py
src/api/chatbot/agent/profile_update_workflow/: __init__.py  workflow.py
src/api/chatbot/agent/services/: __init__.py  google_settings.py
src/api/chatbot/agent/skills/diary-creation/: SKILL.md
src/api/chatbot/audio/: __init__.py
src/api/chatbot/database/: __init__.py  agent.py  core.py  interfaces.py  models.py  name.py  repositories.py  users.py
src/api/chatbot/utils/: __init__.py  agent_response.py  auth.py  config.py  cosmos.py  crypto.py  diary_utils.py  drive_folder.py  google_auth.py  google_drive.py  google_drive_utils.py  google_settings.py  line.py  nijivoice.py  sentiment.py  transcript.py
src/api/chatbot/websocket/: __init__.py  handlers.py  manager.py  utils.py
src/api/line-ai-bot/: __init__.py  main.py
src/api/line-ai-bot/agent/: __init__.py
src/api/line-ai-bot/utils/: chat.py  common.py  config.py  cosmos.py
src/api/tests/: sample.m4a  test_agent_tools.py  test_cosmos_container.py  test_crypto_utils.py  test_database_core.py  test_dependencies.py  test_diary_utils.py  test_ensure_google_settings.py  test_flex_message.py  test_langsmith_config.py  test_main.py  test_repositories.py
src/api/tests/utils/: test_chat.py
src/api/tools/: download_secrets_from_keyvault.py  register_user_dic.py  register_user_info.py  test_openai_compatible_api.py  upload_secrets_to_keyvault.py
src/func/: .env.sample  Dockerfile  aisearch.py  cosmos_connection.py  cosmosdb.py  diary_files.py  digest_reorganizer.py  function_app.py  get_google_drive.py  google_auth.py  line_notifier.py  logger.py  pyproject.toml  requirements.txt
src/func/mcp/: function_app.py  pyproject.toml
src/func/mcp-spotify/: README.md  function_app.py  pyproject.toml
src/func/tests/: test_cosmosdb_container.py  test_diary_files.py  test_digest_reorganizer.py  test_line_notifier.py  test_reorganize_digest_notification.py  test_upload_recent_diaries.py
src/mcp/: .env.sample  Dockerfile  README.md  function_app.py  get_spotify_refresh_token.py  host.json  pyproject.toml  requirements.txt  spotify_api.py  utils.py
src/mcp/tests/: __init__.py  test_anime_playlist.py  test_openai_web_search.py  test_perplexity_search.py  test_runner.py  test_spotify_search.py
tests/utils/: test_chat.py
tools/: download_secrets_from_keyvault.py  pyproject.toml  upload_secrets_to_keyvault.py
utils/: chat.py  common.py  cosmos.py  openai.py
