[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.136.1,<0.137",
    "uvicorn>=0.46.0,<0.47",
    "line-bot-sdk>=3.11.0,<4",
    "python-dotenv>=1.0.1,<2",
    "azure-cosmos>=4.6.0,<5",
    "pytz~=2026.2",
    "deepagents>=0.5.3",
    "langchain-core>=1.3.0,<2",
    "langchain-openai>=1.2.1,<2",
    "langgraph>=1.1.10,<2",
    "langgraph-checkpoint-postgres>=3.0.1,<4",
    "langsmith>=0.8.0",
    "google-auth>=2.50.0",
    "google-api-python-client>=2.195.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "psycopg[binary,pool]>=3.3.4",
]

[tool.uv]
package = false
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.2,<1.4",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 127
