[project]
name = "diary-rag"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "azure-functions>=1.21.3,<2",
    "azure-cosmos>=4.16.1,<5",
    "azure-identity>=1.16.0,<2",
    "python-dotenv>=1.0.0,<2",
    "openai>=2.45.0,<3",
    "cryptography>=49.0.0,<50",
    "google-auth>=2.56.0,<3",
    "google-auth-oauthlib>=1.4.0,<2",
    "google-auth-httplib2>=0.4.0,<0.5",
    "google-api-python-client>=2.198.0,<3",
    "langchain-core>=1.4.9,<2",
    "deepagents>=0.6.12",
    "langchain-openai>=1.3.5",
    "langsmith>=0.10.5",
    "line-bot-sdk>=3.25.0,<4",
]

[tool.uv]
package = false
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.14.1",
    "debugpy>=1.8.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 127
