[project]
name = "mcp"
version = "0.1.0"
description = "MCP Azure Function for music streaming integration"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.13"
readme = "README.md"
dependencies = [
    "azure-functions>=1.23.0,<2",
    "requests>=2.31.0,<3",
    "azure-identity>=1.16.0,<2",
    "spotipy>=2.23.0,<3",
    "python-dotenv>=1.0.0,<2",
    "openai>=1.40.0,<2",
    "pytest>=8.2.0,<9",
]

[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.11.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 127