[project]
name = "mcp"
version = "0.1.0"
description = "MCP Azure Function for music streaming integration"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.11.0"
readme = "README.md"
dependencies = [
    "azure-functions>=1.23.0,<2",
    "requests>=2.31.0,<3",
    "azure-identity>=1.16.0,<2",
    "spotipy>=2.23.0,<3",
    "python-dotenv>=1.0.0,<2",
    "openai>=1.40.0,<3",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 127
